# mutilmodal

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
apps/modern_portals/: MANIFEST.in  README.md  package.json  pyproject.toml  tailwind.config.js
apps/modern_portals/modern_portals/: api.py  hooks.py  modules.txt
apps/modern_portals/modern_portals/config/: desktop.py
apps/modern_portals/modern_portals/fixtures/: role_profile.json
apps/modern_portals/modern_portals/public/css/: tailwind.css
apps/modern_portals/modern_portals/public/js/: portal.js
apps/modern_portals/modern_portals/templates/includes/: portal_navbar.html  portal_sidebar.html
apps/modern_portals/modern_portals/www/: customer_portal.html  customer_portal.py  supplier_portal.html  supplier_portal.py
apps/web/: .dockerignore  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/dashboard/: AIAssistant.tsx  AnalysisDashboard.tsx  AuthPanel.tsx  DisasterTimeline.tsx  IncidentCenter.tsx  KpiCards.tsx  (+12 more)
apps/web/lib/: api.ts  local-ai.ts  mock-data.ts  theme-provider.tsx  types.ts  use-live-telemetry.ts  use-preferences.ts  use-voice-commands.ts  weather-api.ts
apps/web/public/: manifest.json  sw.js
database/: schema.sql
deploy/aws/: ecs-task-definition.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md
services/api/: .dockerignore  Dockerfile  requirements.txt
services/api/app/: __init__.py  main.py
(+35 files in other folders)
